--- a/services.yaml
+++ b/services.yaml
@@ -6,3 +6,7 @@ services:
   - name: jenkins_gradle_project
     path: "/Users/Chandan/Documents/Personal Documents/Tech Practice/jenkins_gradle_project"
     type: gradle
+
+   - name: spring-cucumber-gradle
+    path: "/Users/Chandan/Documents/Personal Documents/Tech Practice/spring-cucumber-gradle"
+    type: gradle  
